@@ -1,1 +1,7 @@
 SUBDIRS = src
+
+release: distdir
+	-chmod -R a+r $(distdir)
+	GZIP=$(GZIP_ENV) $(AMTAR)$(TAR) chozf $(distdir).tar.gz $(distdir)
+	BZIP2=$(BZIP2_ENV) $(AMTAR)$(TAR) --bzip2 -chof $(distdir).tar.bz2 $(distdir)
+	-rm -rf $(distdir)
